AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libsfutil.a

libsfutil_a_SOURCES = sfghash.c sfghash.h \
                      sfhashfcn.c sfhashfcn.h \
                      sflsq.c sflsq.h \
                      sfmemcap.c sfmemcap.h \
                      sfthd.c sfthd.h \
                      sfxhash.c sfxhash.h \
	              ipobj.c ipobj.h \
		      mwm.c mwm.h \
                      sfksearch.c sfksearch.h \
                      acsmx.c acsmx.h \
                      mpse.c mpse.h \
                      bitop.h \
                      util_math.c util_math.h \
                      util_net.c util_net.h \
                      util_str.c util_str.h




INCLUDES = @INCLUDES@
